codesplitted/CodeCuda/ERROR
encryption.cu(91): error: initial value of reference to non-const must be an lvalue
          hex_to_bytes(lines[i], std::vector<uint8_t>(h_plaintext + i * plaintext_len, h_plaintext + (i + 1) * plaintext_len));
                                 ^

1 error detected in the compilation of "encryption.cu".
